--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
-MONGODB_URI="mongodb+srv://Chinthana%20A:chintumongo23@cluster0.e8wympz.mongodb.net/test?retryWrites=true&w=majority"
+MONGODB_URI=mongodb+srv://chinthana:chinthana123@cluster0.e8wympz.mongodb.net/bg-removal?retryWrites=true&w=majority
+REMOVE_BG_API_KEY="your-remove-bg-api-key-here"
