--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "razorpay": "^2.9.6",
+    "remove.bg": "^1.3.0",
     "svix": "^1.78.0"
   }
 }
